--- a/styles.css
+++ b/styles.css
@@ -221,4 +221,90 @@ nav div {
 #footer {
     height: 511px;
     background-color: #23272a;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#top-of-footer {
+    display: flex;
+    justify-content: space-between;
+    gap: 100px;
+    padding-bottom: 30px;
+    width: 1180px;
+}
+
+#right-block-footer {
+    display: flex;
+    gap: 100px;
+    color: white;
+}
+
+#title-footer h1 {
+    margin-top: 0px;
+}
+
+#Product {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+#Company {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+#Resources {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+#Policies {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+#bot-of-footer {
+    width: 1180px;
+    border-top: solid;
+    border-top-color: #5865F2;
+    display: flex;
+    justify-content: space-between;
+    padding-top: 30px;
+}
+
+#button-open {
+    display: flex;
+    padding: 8px 16px;
+    background-color: #5865F2;
+    color: white;
+    border-radius: 50px;
+    font-size: 15px;
+}
+
+select {
+    border: none;
+    background-color: transparent;
+    color: white;
+}
+
+#language {
+    display: flex;
+}
+
+#language img {
+    width: 24px;
+}
+
+#links-to-social-media {
+    display: flex;
+    color: white;
+    gap: 20px;
+    margin-top: 24px;
+    font-size: 20px;
 }
